test/classes/errors/nilability-init-var/init-var-oknil-borrowed-from-nonnil-borrowed.chpl
//  lhs: borrowed?  rhs: borrowed!  ok

class MyClass {
  var x: int;
}

var rhs = (new owned MyClass()).borrow();

var lhs: borrowed MyClass? = rhs;


